# Shadowlights

./: .gitignore  Punto1.ipynb  docker-compose.yml  pyproject.toml
Puntos/: Punto1.ipynb  Punto2.ipynb  Punto3-A.ipynb  Punto3-B.py  Punto4.ipynb
kpi_project/: dbt_project.yml
kpi_project/models/kpis/: base_ads.sql  cac.sql  compare_last_30_days.sql  compare_n_days.sql  roas.sql  schema.yml
n8n_data/: config
