[project]
name = "shadowlights"
version = "0.1.0"
description = ""
authors = [
    {name = "SierraSantiago",email = "SantiagoSierra003@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-duckdb (>=1.9.6,<2.0.0)",
    "duckdb (>=1.4.0,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "notebook (>=7.4.5,<8.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
